--- a/Iwillbe/app/src/main/AndroidManifest.xml
+++ b/Iwillbe/app/src/main/AndroidManifest.xml
@@ -8,13 +8,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".login.LonginActivity"><!--主入口-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".login.RegisterActivity"/><!--注册页面-->
+        <activity android:name=".login.SetPassword"/><!--修改页面-->
+
+        <activity android:name=".person.PersonHomepageActivity"/><!--个人主页页面-->
+
+        <activity android:name=".turnserver.TurnServerActivity"/><!--成为服务者页面-->
+        <activity android:name=".turnserver.IssueServerActivity"/><!--类型选择页面-->
     </application>
 
 </manifest>
